# metatree

./: .IGNORE_THIS_FILE_REUSE_LICENSE_CHEAT.txt  .gitignore  README.md  depend-info.txt  metatree.py  pyproject.toml  pyproject.toml.license  reuse.spdx  test.json
.reuse/: dep5
ort/advise/: advisor-result.yml
ort/analyzer/: analyzer-result.yml
ort/output_docs/: bom.spdx.yml  gl-license-scanning-report.json  scan-report.html
ort/scanner/: scan-result.yml
