[tool.poetry]
name = "metatree"
version = "0.1.0"
description = ""
authors = ["Jason Scheffel <contact@jasonscheffel.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argopt = "^0.8.2"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
